style.css
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* font-family: 'Poppins', sans-serif;
font-family: 'Lato', sans-serif; */

html {
    font-size: 10px;
    scroll-behavior: smooth;
    letter-spacing: 1px;
    background-color: #fff;
}

p {
    line-height:  0.5;
    letter-spacing: 0.2px;
    font-weight: 100;
    font-family: 'Lato', sans-serif; 
}

a {
    text-decoration: none;
    list-style: none;
}


/* Nav + Home */
header {
    display: flex;
    width: 100%;
    height: 80vh;
    background: linear-gradient(rgba(16,29,44,.6), rgba(16,29,44,.6)),
                url(assets/mainImg.jpg) center no-repeat;
    background-size: cover;
    flex-direction: column;
    text-align: center;
    position: relative;
    /* background-attachment: fixed; */
}

/* burger creation here */
.burger {
    padding: 2rem 2.5rem;
    position: fixed;
    top: 1.2rem;
    right: 1.2rem;
    background-color: #0000004d;
    z-index: 1001;
    border-radius: 3px;
    cursor: pointer;
}

/* needed to create toggle menu */
.burger .bar,
.burger .bar::before,
.burger .bar::after {
    content: '';
    position: absolute;
    height: 2.5px;
    width: 3em;
    background-color: #fff;;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    transition: 650ms;
}

.burger .bar::before {
    top: -2rem;
}

.burger .bar::after {
    top: 2rem;
} 

.active .bar {
    background-color: transparent;
    z-index: 1000;

}

.active .bar::before {
    transform: rotate(45deg);
}

.active .bar::after {
    transform: rotate(-45deg);
}

/* now i insert the jquery to make this work on app.js */
.active .bar::before,
.active .bar::after {
    top: 0;
}

nav {
    display: flex;
    justify-content: center;
    align-content: center;
    width: 100%;
    height: 6rem;
    position: relative;
    line-height: 5rem;
    background-color: rgba(0, 0, 0, .4);
    margin-bottom: 0px;
}

#logo {
    display: none;
    text-transform: capitalize;
    font-size: 10px;
    /* font-weight: 300; */
    text-decoration: none;
    color: white;
    font-family: 'Poppins', sans-serif;
    font-size: 3rem;
    font-family: 'Audiowide', cursive;
}

.overlay {
    background-color: rgba(0, 0, 0, .95);
    position: fixed;
    right: 0;
    left: 0;
    top: 0;
    bottom: 0;
    z-index: 1;
    /* instead of all i can use opacity */
    transition: all 650ms;
    transform: scale(0);
    opacity: 0;
    z-index: 1000;

}

.overlay a {
    text-decoration: none;
}

.overlay.burger-open {
    transform: scale(1);
    opacity: 1;
}

.nav .overlay ul {
    display: flex;
    position: relative;
    height: 100%;
    flex-direction: column;
    justify-content: center;
}

.nav .overlay ul li {
    text-transform: uppercase;
}

.nav .overlay ul li a {
    display: block;
    font-size: 1rem;
    transition: all 650ms;
    justify-content:center; 
    text-align: center;
    color: white;
}

.nav .overlay ul li a:hover,
.nav .overlay ul li a .active:hover {
    text-align: center;
    color: #61bbe1;
}

/* Home Work */
.main-txt {
    width: 70%;
    color: #fff;
    margin-top: 10%;
}

.inner-txt {
    padding: 20px 20px 20px 20px;
}

.inner-txt h1 {
    font-size: 3.5rem;
    letter-spacing: 1px;
    line-height: 1.3em;
    margin-bottom: 2%;
    text-transform: none;
    font-family: 'Lato', sans-serif; 
}

.inner-txt h1 span {
    color: #61bbe1;
}

.inner-txt h2 {
    font-size: 2.5rem;
    letter-spacing: 1px;
    line-height: 1.3em;
    font-weight: 300;
    position: relative;
}

.media {
    position: absolute;
    right: -10px;
    float: right;
    top: 57%;
    z-index: 999;
    transform: rotate(90deg);
    cursor: pointer;
}

.media ul {
    list-style: none;
}

.media ul li {
    display: inline-block;
    text-transform: uppercase;
    color: #ffffffb3;
    font-family: Helvetica;
    font-size: 25px;
    font-weight: 300;
    letter-spacing: 2px;
    margin-right: 40px;
    transform: rotate(270deg);
}

.content button {
    cursor: pointer;
}


/* style for main buttons */

.main-button {
    border-radius: 12px;
    width: 90%;
    background-color: #469dc2;
    padding: 45px;
    text-align:center;
    margin: 16px;
    margin-left: 70px;
    border: 1px;
    opacity: 80%;
}
button:hover {
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
  }

/* Nav + Home End */

/* Aside Page */
.content {
    /* display: inline-block; */
    width: auto;
    height: auto;
    margin-bottom: 3%;
    justify-content: center;
    text-align: center;
    /* margin-left: 20px; */
}

.content .helpQuestion {
    font-size: 35px;
    padding: 1%;
}

.asidestyle {
    margin-right: 20px;
    padding: 20px;
    clear: both;
    float: right;
    width: 20%;
    height: 100%;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    /* background-color: ; */
}

.content, 
.asidestyle {
    margin-bottom: 0%;
}

/* Meet the Team */
footer {
    display: inline-flex;
    background-color: #212121;
    position: inherit;
    bottom: 0;
    left: 0;
    width: 100%;
    height: auto;
    margin: 44px;
    /* padding: 15px 0; */
    align-self: center;
    align-content: center;
    text-align: center;
    align-items: center;
    justify-content: center;
  }

/* 
  .horizontal {
      margin-top: 100vh;
      padding-top: 100vh;
  } */
/* .footer {
    display: flexbox;
    width: 100%;
    align-self: center;
    align-content: center;
    text-align: center;
    align-items: center;
    justify-content: center;
} */

.stylefooter{
    justify-content: space-between;
    margin-left: 2%;
    margin-right: 2%;
    height: 10%;
}

.column {
    float: left;
    width: 22%;
    margin-bottom: 16px;
    padding: 0 8px;
}
  
.card {
    text-align: center;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1)

}

img {
    max-width: 100%;
    height: auto;
    margin-top: 20px;
}
  
.container {
    padding: 0 16px;
    padding-top: 7%;
}
  
.container::after, .row::after {
    content: "";
    clear: both;
    display: table;
}
  
.title {
    color: grey;
}
  
.button {
    border: none;
    outline: 0;
    display: inline-block;
    padding: 8px;
    color: white;
    background-color: #000;
    text-align: center;
    cursor: pointer;
    width: 100%;
}
  
.button:hover {
    background-color: #555;
}

.wrapper {
    display: grid;
    grid-gap: 10px;
    grid-template-columns: [col] 100px [col] 100px [col] 100px [col] 100px  ;
    grid-template-rows: [row] auto [row] auto [row] ;

  }

  .box {
    background-color :rgb(225, 225, 225);
    color: #fff;
    border-radius: 5px;
    padding: 20px;
    font-size: 150%;
  }

  .box1 {
    grid-column: col 2 / span 4;
    grid-row: row ;
  }
  .box2 {
    grid-column: col 2 / span 4 ;
    grid-row: row 2;
  }
  .box3 {
    grid-column: col 2 / span 4 ;
    grid-row: row 3 ;
  }
  .box4 {
    grid-column: col 2 / span 4;
    grid-row: row 4 ;
  }

  .box5 {
    grid-column: col 2 / span 4 ;
    grid-row: row 5;
  }

  .like {
    background-color: transparent;

  }

.like button {
  cursor: pointer;
}

.like button:hover {
  color: red;
} 

#modalBox {
    /* position:fixed; */
    /* display: inline-flex; */
    width: 100%;
    height: 100%;
    padding: 3%;
    z-index:1;
    display: none;
    box-shadow: none;
    background-color: #f1f4f5;
}

#modalBox input {
    font-size: 18px;
    /* height: auto; */
}

#modalBox input::placeholder {
    font-size: 15px;
    text-align: center;
    color: #4d4d4d;    
}


.mainSearchBtns {
    display: inline-flex;
    align-items: center;
    font-size: 15px !important;
    width: auto;
}

#resultBtnFontSizes {
    font-size: 18px;
}

#modalBox .scrolling  {
    background-color: #f1f4f5;
}

/* Favorites Page */

#myFavorites {
    display: none;
    width: 100%;
    height: 80%;
    display: none;
    justify-content: center;
    background-color: #f1f4f5;
    margin-bottom: 3%;
}

.favContainer {
    display: inline;
    width: 85%;
    /* height: 50%; */
    background-color: transparent;
    align-self: center; 
}
  
.favBox {
    background-color: transparent;
    color: #fff;
    border-radius: 5px;
    padding: 10px;
    font-size: 150%;
}

.favBox1 {
    grid-column: col 2 / span 4;
    grid-row: row ;
}
.favBox2 {
    grid-column: col 2 / span 4 ;
    grid-row: row 2;
}
.favBox3 {
    grid-column: col 2 / span 4 ;
    grid-row: row 3 ;
}
.favBox4 {
    grid-column: col 2 / span 4;
    grid-row: row 4 ;
}

.favBox5 {
    grid-column: col 2 / span 4 ;
    grid-row: row 5;
}

.favBox input {
    display: flex;
    width: 100%;
    height: 80px;
    justify-content: flex-start;
    align-self: flex-start;
    border: 3px solid #555;
}

.favBox input::placeholder {
    padding-left: 30px;
}


#charityname {
    color: black;
}


/* RESPONSIVE */
@media screen and (max-width: 1200px) {
    #logo {
        display: block;
    }
}

@media screen and (min-width: 1200px) {
    .burger {
        display: none;
    }
    .nav {
        display: flex;
        padding: 0.5rem 10rem 0;
        justify-content: space-between;
    }
    #logo {
        display: block;
    }
    .nav .overlay {
        position: initial;
        background: none;
        opacity: initial;
        transform: initial;
    }
    .nav .overlay ul {
        flex-direction: row;
        list-style: none;
        margin-top: 2px;
    }
    .nav .overlay ul li a {
        font-size: 1.5rem;
        letter-spacing: 1px;
        margin-right: -1px;
        padding: 0 2rem;
    }
}

/*  */

